--- a/form/style.css
+++ b/form/style.css
@@ -35,3 +35,9 @@ body {
     font-size: 14px;
     outline: 0;
 }
+.error {
+    font-size: 11px;
+    background-color: #FF0000;
+    color: #fff;
+    padding: 6px;
+}
